--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     <a href="#!" class="btn-large waves-effect waves-light center">Set timer</a>
                 </div>
             </div>
+            <div class="divider"></div>
+            <div class="row">
+            	<div class="col s6 offset-s3 center-align">
+            		<h1 class="col s3">01h</h1>
+            		<h1 class="col s1">:</h1>
+            		<h1 class="col s4">34m</h1>
+            		<h1 class="col s1">:</h1>
+            		<h1 class="col s3">30s</h1>
+            	</div>
+            </div>
         </div>
     </div>
 
