--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="input-field col s12 m6 offset-m3 tooltipped" data-position="bottom" data-delay="100" data-tooltip="After how many minutes do you start feeling distracted or feel like it's not working anymore?">
                     <i class="material-icons prefix">assignment</i>
 					<p class="range-field">
-						<input id="password" type="range" id="test5" min="0" max="180" />
+						<input id="studyTime" type="range" min="0" max="180" value="30"/>
 					</p>
                     <label style="margin-top: -10px;">Study interval duration in minutes</label>
                 </div>
@@ -34,25 +34,26 @@
                 <div class="input-field col s12 m6 offset-m3 tooltipped" data-position="bottom" data-delay="100" data-tooltip="How long does the break need to be in order to feel fresh? Don't cheat!">
                    <i class="material-icons prefix">pause_circle_outline</i>
 					<p class="range-field">
-						<input id="password" type="range" id="test5" min="0" max="30" />
+						<input id="pauseTime" type="range" min="0" max="30" value="5" />
 					</p>
                     <label style="margin-top: -10px;">Break interval duration in minutes</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col s6 offset-s3 center-align">
-                    <a href="#!" class="btn-large waves-effect waves-light center">Set timer</a>
+                    <a id="setTimer" href="#!" class="btn-large waves-effect waves-light center">Set timer</a>
                 </div>
             </div>
             <div class="divider"></div>
-            <div class="row">
-            	<div class="col s6 offset-s3 center-align">
-            		<h1 class="col s3">01h</h1>
-            		<h1 class="col s1">:</h1>
-            		<h1 class="col s4">34m</h1>
-            		<h1 class="col s1">:</h1>
-            		<h1 class="col s3">30s</h1>
+            <div class="row" style="height: 200px;">
+            	<div class="col m12 l8 offset-l2 center-align">
+					<div class="col s3"><h1 id="hours">0h</h1></div>
+					<div class="col s1"><h1>:</h1></div>
+					<div class="col s4"><h1 id="minutes">30m</h1></div>
+					<div class="col s1"><h1>:</h1></div>
+					<div class="col s3"><h1 id="seconds">0s</h1></div>
             	</div>
+<!--            	nice loading bar here-->
             </div>
         </div>
     </div>
