--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             </div>
             <div class="divider"></div>
             <div class="row" style="height: 200px;">
+            	<div class="center-align">
+            		<h2 id="status">Study time</h2>
+            	</div>
             	<div class="col m12 l8 offset-l2 center-align">
 					<div class="col s3"><h1 id="hours">0h</h1></div>
 					<div class="col s1"><h1>:</h1></div>
