--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <p class="grey-text text-lighten-4"></p>
+                <p class="grey-text text-lighten-4">This site was created to help anyone studying </p>
               </div>
             </div>
           </div>
@@ -74,6 +74,17 @@
             </div>
           </div>
         </footer>
+
+       <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73714766-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 
