--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <title>Study</title>
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73714766-1', 'auto');
+  ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
@@ -64,7 +73,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <p class="grey-text text-lighten-4">This site was created to help anyone studying </p>
+                <p class="grey-text text-lighten-4">This site was created to help anyone studying, more info about why this technique is efficient</p>
               </div>
             </div>
           </div>
@@ -75,16 +84,7 @@
           </div>
         </footer>
 
-       <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-73714766-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 
