added sound and fixed animation bugs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
     <div class="teal lighten-1" style="margin-bottom: 20px;">
 		<h4 class="white-text center-align">Efficient study</h4>
+
     </div>
     <main>
 		<div class="container">
@@ -39,7 +40,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="input-field col s12 m6 offset-m3 tooltipped" data-position="bottom" data-delay="100" data-tooltip="How long does the break need to be in order to feel fresh? Don't cheat!">
+					<div class="input-field col s12 m6 offset-m3 tooltipped" data-position="bottom" data-delay="100" data-tooltip="How long does the break need to be in order to feel refreshed? Don't cheat!">
 					   <i class="material-icons prefix">pause_circle_outline</i>
 						<p class="range-field">
 							<input id="pauseTime" type="range" min="0" max="30" value="5" />
@@ -47,6 +48,7 @@
 						<label style="margin-top: -10px;">Break interval duration in minutes</label>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col s6 offset-s3 center-align">
 						<a id="setTimer" href="#!" class="btn-large waves-effect waves-light center">Set timer</a>
@@ -55,7 +57,7 @@
 				<div class="divider"></div>
 				<div class="row" style="height: 200px;">
 					<div class="center-align">
-						<h2 id="status">Study time</h2>
+						<h3 id="status">Study time</h3>
 					</div>
 					<div class="col m12 l8 offset-l2 center-align">
 						<div class="col s3"><h3 class="timerH3" id="hours">0h</h3></div>
@@ -64,25 +66,30 @@
 						<div class="col s1"><h3 class="timerH3">:</h3></div>
 						<div class="col s3"><h3 class="timerH3" id="seconds">0s</h3></div>
 					</div>
-	<!--            	nice loading bar here-->
+<!--nice loading bar here-->
 				</div>
 			</div>
 		</div>
     </main>
-    <footer class="page-footer teal">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <p class="grey-text text-lighten-4">This site was created to help anyone studying, more info about why this technique is efficient</p>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2016 Alexandru Simandi
-            </div>
-          </div>
-        </footer>
+	<footer class="page-footer teal">
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<p class="grey-text text-lighten-2 center">This site was created to help anyone studying, more info about why this technique is efficient in this great
+						<a href="https://www.youtube.com/watch?v=IlU-zDU6aQ0" target="_blank">
+							<span class="chip teal lighten-3 text-black">video</span>
+						</a>
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container row">
+				<div class="col s12 m3">© 2016 Alexandru Simandi</div>
+				<div class="col s12 m9 right-align">Questions or feedback at simandialexander@gmail.com</div>
+			</div>
+		</div>
+	</footer>
 
 
 
