fixed bug reseting test

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 						<div class="col s3"><h3 class="timerH3" id="seconds">0s</h3></div>
 					</div>
 <!--nice loading bar here-->
+					<div class="progress col s6 offset-s3">
+						<div id="progressBar" class="determinate" style="width: 0%"></div>
+					</div>
 				</div>
 			</div>
 		</div>
