--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<p class="range-field">
 							<input id="studyTime" type="range" min="0" max="180" value="30"/>
 						</p>
-						<label style="margin-top: -10px;">Study interval duration in minutes</label>
+						<label style="margin-top: -10px;">Study interval duration in minutes : <span id="studyTimeText">30</span></label>
 					</div>
 				</div>
 				<div class="row">
@@ -45,13 +45,14 @@
 						<p class="range-field">
 							<input id="pauseTime" type="range" min="0" max="30" value="5" />
 						</p>
-						<label style="margin-top: -10px;">Break interval duration in minutes</label>
+						<label style="margin-top: -10px;">Break interval duration in minutes : <span id="pauseTimeText">5</span></label>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="col s6 offset-s3 center-align">
 						<a id="setTimer" href="#!" class="btn-large waves-effect waves-light center">Set timer</a>
+						<a id="clearTimer" href="#!" class="btn-large waves-effect waves-light center">Clear</a>
 					</div>
 				</div>
 				<div class="divider"></div>
