added wiki to footer

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<p class="grey-text text-lighten-2 center">This site was created to help anyone studying, more info about why this technique is efficient in this great
+					<p class="grey-text text-lighten-2 center">This site was created to help anyone studying or working, more info about why this technique is efficient in this great
 						<a href="https://www.youtube.com/watch?v=IlU-zDU6aQ0" target="_blank">
 							<span class="chip teal lighten-3 text-black">video</span>
 						</a>
+					or on <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank"><span class="chip teal lighten-3 text-black">wiki</span></a>
 					</p>
 				</div>
 			</div>
