--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 							<span class="chip teal lighten-3 text-black">video</span>
 						</a>
 					or on <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank"><span class="chip teal lighten-3 text-black">wiki</span></a>
+					if you are in a hurry.
 					</p>
 				</div>
 			</div>
